ncap/Ifc58/include/IFCAPI.H

pSTRING IFCCALL CModule_ModName(CModule *mod);
BOOL IFCCALL CModule_IfxGetBoardParam(CModule *mod,IFC_HW_PARAMS eParamId,DWORD *param);
DWORD IFCCALL CModule_Revision(CModule *mod);
DWORD IFCCALL CModule_GetLastError(CModule *mod);
pSTRING IFCCALL IFC_strcpy(pSTRING dst, pSTRING src);
PCIntrCallback IFCCALL IFC_IfxCreateIntrCallback(pCModule pMod, IFC_INTREVENT iEvent, pIntrCallBackFunc func, LPVOID pParam);
void IFCCALL IFC_IfxDeleteIntrCallback(PCIntrCallback hCallback);
pCITIMods IFCCALL IFC_IfxCreateITIMods(void);
void IFCCALL IFC_IfxDeleteITIMods(pCITIMods itiMods);
BOOL IFCCALL CITIMods_GetFirst(CITIMods *itiMods, LPITI_PARENT_MOD mod);
BOOL IFCCALL CITIMods_GetNext(CITIMods *itiMods, LPITI_PARENT_MOD mod);
/* CIFCOS class */
double IFCCALL CIFCOS_GetSystimeMicrosecs(void);
DWORD IFCCALL CIFCOS_GetSystimeMillisecs(void);
/* CPCVision2 class */
BOOL IFCCALL CPCVision2_SwitchCameraDefineStart(CICapMod *capMod);
BOOL IFCCALL CPCVision2_SwitchCameraDefineEnd(CICapMod *capMod);
BOOL IFCCALL CPCVision2_SwitchCameraGrab(CICapMod *capMod);
BOOL IFCCALL CPCVision2_SwitchCameraSnap(CICapMod *capMod, DWORD numFrames);
BOOL IFCCALL CPCVision2_SwitchCameraFreeze(CICapMod *capMod);
BOOL IFCCALL CPCVision2_SetFrameDelaySequence(CICapMod *capMod, DWORD *camPortSeq, DWORD numCameras, IFC_TRIG_SRC_TYPE trigSrc);
BOOL IFCCALL CPCVision2_FrameDelaySnap(CICapMod *capMod, IFC_TRIG_SRC_TYPE trigSrc, pBYTE dest, short x, short y, short dx, short dy, DWORD dwMilliseconds);
BOOL IFCCALL CPCVision2_FrameDelayWait(CICapMod *capMod, DWORD dwMilliseconds);