ncap/Ifc58/examples/VB/Ifcapi.bas

Declare Function IFC_IfxCreateITIMods Lib "ifcapi.dll" () As Long
Declare Sub IFC_IfxDeleteITIMods Lib "ifcapi.dll" (ByVal itiMods As Long)




Declare Function CModule_ModName2 Lib "ifcapi.dll" Alias "CModule_ModName" (ByVal Pmod As Long) As Long
Declare Function CModule_IfxGetBoardParam Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal eParamId As IFC_HW_PARAMS, ByRef param As Long) As Long
Declare Function CModule_Revision Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CModule_GetLastError Lib "ifcapi.dll" (ByVal pClass As Long) As Long

Declare Function IFC_strcpy Lib "ifcapi.dll" (ByVal Outstr As String, ByVal Instr As Long) As String

Declare Function CITIMods_GetFirst Lib "ifcapi.dll" (ByVal itiMods As Long, ByRef modDesc As ITI_PARENT_MOD) As Long
Declare Function CITIMods_GetNext Lib "ifcapi.dll" (ByVal itiMods As Long, ByRef modDesc As ITI_PARENT_MOD) As Long

Declare Function CIFCOS_GetSystimeMicrosecs Lib "ifcapi.dll" () As Double
Declare Function CIFCOS_GetSystimeMillisecs Lib "ifcapi.dll" () As Double


Declare Function IFC_IfxCreateIntrCallback Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal intrEvent As Long, ByVal lpStartAddress As Long, ByVal lpParameter As Long) As Long
Declare Sub IFC_IfxDeleteIntrCallback Lib "ifcapi.dll" (ByVal callBack As Long)

Declare Function CPCVision2_SwitchCameraDefineStart Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CPCVision2_SwitchCameraDefineEnd Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CPCVision2_SwitchCameraGrab Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CPCVision2_SwitchCameraSnap Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal numFrames As Long) As Long
Declare Function CPCVision2_SwitchCameraFreeze Lib "ifcapi.dll" (ByVal CapMod As Long) As Long
Declare Function CPCVision2_SetFrameDelaySequence Lib "ifcapi.dll" (ByVal CapMod As Long, ByRef camPortSeq As Long, ByVal numCameras As Long, ByVal trigSrc As IFC_TRIG_SRC_TYPE) As Long
Declare Function CPCVision2_FrameDelaySnap Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal trigSrc As IFC_TRIG_SRC_TYPE, ByRef dest As Byte, ByVal x As Integer, ByVal y As Integer, ByVal dx As Integer, ByVal dy As Integer, ByVal dwMilliseconds As Long) As Long
Declare Function CPCVision2_FrameDelayWait Lib "ifcapi.dll" (ByVal CapMod As Long, ByVal dwMilliseconds As Long) As Long



Public Function CModule_ModName(ByVal Pmod As Long) As String
    Dim tempstr As String
    tempstr = String(255, vbNullChar)

    IFC_strcpy tempstr, CModule_ModName2(Pmod)
    CModule_ModName = tempstr
End Function

